--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
     background-image: url("./Img/todo.avif");
     background-repeat: no-repeat;
     background-position: center;
+    background-size: auto;
     color: #E5E5E5;
     display: flex;
     flex-direction: column;
@@ -31,7 +32,7 @@ body {
 }
 
 h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     display: flex;
     justify-content: center;
 }
@@ -49,7 +50,7 @@ h1 {
     margin-bottom: 20px;
     display: flex;
     justify-content: center;
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: bolder;
 }
 
